--- a/build.gradle
+++ b/build.gradle
@@ -17,19 +17,20 @@ apply plugin: 'groovy'
 apply plugin: 'org.akhikhl.gretty'
 
 dependencies {
-   compile "javax.ws.rs:jsr311-api:1.1"
-   compile "com.sun.jersey:jersey-core:1.9.1"
-   compile "com.sun.jersey:jersey-server:1.9.1"
-   compile "com.sun.jersey:jersey-json:1.9.1"
- 
-   // Dependency needed for interceptors and filters.
-   compile "com.sun.jersey.contribs:jersey-contribs:1.19"
-   
+   compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
+   compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.19'
+   compile 'org.glassfish.jersey.core:jersey-server:2.19'
+   compile 'com.google.code.gson:gson:2.2.4'
+
    //MapDB
    compile "org.mapdb:mapdb:1.0.8"
    
    //GSON
    compile "com.google.code.gson:gson:2.4"
+   
+   //Logger
+   compile "org.slf4j:slf4j-api:1.7.12"
+   
    
    testCompile "junit:junit:4.12"
    testCompile "org.codehaus.groovy:groovy-all:2.4.3"
