--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,35 +1,20 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
- xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
- xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
- id="WebApp_ID" version="2.5">
- 
- <display-name>Jersey Example</display-name>
- <servlet>
-   <servlet-name>JerseyServlet</servlet-name>
-   <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
- 
- <!-- Services package configuration. -->
-   <init-param>
-     <param-name>jersey.config.server.provider.packages</param-name>
-     <param-value>com.lucareto.services</param-value>
-   </init-param> 
-   
-   <init-param>
-    <param-name>com.sun.jersey.config.property.packages</param-name>
-    <param-value>com.lucareto.services</param-value>
-   </init-param>
-   
-   <init-param>
-    <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
-    <param-value>com.lucareto.filters.CORSFilter</param-value>
-   </init-param>
-   
-   
-   
- </servlet>
- <servlet-mapping>
-   <servlet-name>JerseyServlet</servlet-name>
-   <url-pattern>/*</url-pattern>
- </servlet-mapping>
+<web-app>
+
+    <display-name>Simple REST Application</display-name>
+
+    <servlet>
+        <servlet-name>jersey-serlvet</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>javax.ws.rs.Application</param-name>
+            <param-value>com.lucareto.jersey.SimpleApplication</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>jersey-serlvet</servlet-name>
+        <url-pattern>/*</url-pattern>
+    </servlet-mapping>
+
 </web-app>
