--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,12 @@ dependencies {
    //Logger
    compile "org.slf4j:slf4j-api:1.7.12"
    
+   //Mongo DB
+   compile "org.mongodb:mongo-java-driver:2.10.1";
+   
+   //Apache common
+   compile "org.apache.commons:commons-lang3:3.1";
+   compile "commons-codec:commons-codec:1.7";
    
    testCompile "junit:junit:4.12"
    testCompile "org.codehaus.groovy:groovy-all:2.4.3"
