--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,11 @@
-dbpath=build/mapdb/clientDB
+JAVAX_RS=2.0.1
+GLASSFISH=2.19
+GSON=2.2.4
+SLJ4_LOGGER=1.7.12
+MONGO_DB=2.10.1
+APACHE_COMMONS_LANG=3.1
+APACHE_COMMONS_CODEC=1.7
+
+JUNIT=4.12
+GROOVY=2.4.3
+SPOCK=1.0-groovy-2.4
